L3/S6/Compil/td3/exo5.output
Grammaire

    0 $accept: A $end

    1 A: E

    2 E: E Pl T
    3  | E Mo T
    4  | T

    5 T: T Mu F
    6  | T Di F
    7  | F

    8 F: NUMBER
    9  | Pg E Pd


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
NUMBER (258) 8
Pl (259) 2
Mo (260) 3
Mu (261) 5
Di (262) 6
Pg (263) 9
Pd (264) 9


Non-terminaux, suivis des règles où ils apparaissent

$accept (10)
    à gauche: 0
A (11)
    à gauche: 1, à droite: 0
E (12)
    à gauche: 2 3 4, à droite: 1 2 3 9
T (13)
    à gauche: 5 6 7, à droite: 2 3 4 5 6
F (14)
    à gauche: 8 9, à droite: 5 6 7


État 0

    0 $accept: . A $end
    1 A: . E
    2 E: . E Pl T
    3  | . E Mo T
    4  | . T
    5 T: . T Mu F
    6  | . T Di F
    7  | . F
    8 F: . NUMBER
    9  | . Pg E Pd

    NUMBER  décalage et aller à l'état 1
    Pg      décalage et aller à l'état 2

    A  aller à l'état 3
    E  aller à l'état 4
    T  aller à l'état 5
    F  aller à l'état 6


État 1

    8 F: NUMBER .

    $défaut  réduction par utilisation de la règle 8 (F)


État 2

    2 E: . E Pl T
    3  | . E Mo T
    4  | . T
    5 T: . T Mu F
    6  | . T Di F
    7  | . F
    8 F: . NUMBER
    9  | . Pg E Pd
    9  | Pg . E Pd

    NUMBER  décalage et aller à l'état 1
    Pg      décalage et aller à l'état 2

    E  aller à l'état 7
    T  aller à l'état 5
    F  aller à l'état 6


État 3

    0 $accept: A . $end

    $end  décalage et aller à l'état 8


État 4

    1 A: E .  [$end]
    2 E: E . Pl T
    3  | E . Mo T

    Pl  décalage et aller à l'état 9
    Mo  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 1 (A)


État 5

    4 E: T .  [$end, Pl, Mo, Pd]
    5 T: T . Mu F
    6  | T . Di F

    Mu  décalage et aller à l'état 11
    Di  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 4 (E)


État 6

    7 T: F .

    $défaut  réduction par utilisation de la règle 7 (T)


État 7

    2 E: E . Pl T
    3  | E . Mo T
    9 F: Pg E . Pd

    Pl  décalage et aller à l'état 9
    Mo  décalage et aller à l'état 10
    Pd  décalage et aller à l'état 13


État 8

    0 $accept: A $end .

    $défaut  accepter


État 9

    2 E: E Pl . T
    5 T: . T Mu F
    6  | . T Di F
    7  | . F
    8 F: . NUMBER
    9  | . Pg E Pd

    NUMBER  décalage et aller à l'état 1
    Pg      décalage et aller à l'état 2

    T  aller à l'état 14
    F  aller à l'état 6


État 10

    3 E: E Mo . T
    5 T: . T Mu F
    6  | . T Di F
    7  | . F
    8 F: . NUMBER
    9  | . Pg E Pd

    NUMBER  décalage et aller à l'état 1
    Pg      décalage et aller à l'état 2

    T  aller à l'état 15
    F  aller à l'état 6


État 11

    5 T: T Mu . F
    8 F: . NUMBER
    9  | . Pg E Pd

    NUMBER  décalage et aller à l'état 1
    Pg      décalage et aller à l'état 2

    F  aller à l'état 16


État 12

    6 T: T Di . F
    8 F: . NUMBER
    9  | . Pg E Pd

    NUMBER  décalage et aller à l'état 1
    Pg      décalage et aller à l'état 2

    F  aller à l'état 17


État 13

    9 F: Pg E Pd .

    $défaut  réduction par utilisation de la règle 9 (F)


État 14

    2 E: E Pl T .  [$end, Pl, Mo, Pd]
    5 T: T . Mu F
    6  | T . Di F

    Mu  décalage et aller à l'état 11
    Di  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 2 (E)


État 15

    3 E: E Mo T .  [$end, Pl, Mo, Pd]
    5 T: T . Mu F
    6  | T . Di F

    Mu  décalage et aller à l'état 11
    Di  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 3 (E)


État 16

    5 T: T Mu F .

    $défaut  réduction par utilisation de la règle 5 (T)


État 17

    6 T: T Di F .

    $défaut  réduction par utilisation de la règle 6 (T)
